src/test/ui/conditional-compilation/cfg-attr-parse.stderr
error: malformed `cfg_attr` attribute input
  --> $DIR/cfg-attr-parse.rs:4:1
   |
LL | #[cfg_attr()]
   | ^^^^^^^^^^^^^ help: missing condition and attribute: `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: expected `,`, found end of `cfg_attr` input
  --> $DIR/cfg-attr-parse.rs:8:17
   |
LL | #[cfg_attr(all())]
   |                 ^ expected `,`
   |
   = help: the valid syntax is `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: expected `,`, found end of `cfg_attr` input
  --> $DIR/cfg-attr-parse.rs:8:17
   |
LL | #[cfg_attr(all())]
   |                 ^ expected `,`
   |
   = help: the valid syntax is `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:17:18
   |
LL | #[cfg_attr(all(),,)]
   |                  ^ expected identifier
   |
   = help: the valid syntax is `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:17:18
   |
LL | #[cfg_attr(all(),,)]
   |                  ^ expected identifier
   |
   = help: the valid syntax is `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:30:28
   |
LL | #[cfg_attr(all(), must_use,,)]
   |                            ^ expected identifier
   |
   = help: the valid syntax is `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:30:28
   |
LL | #[cfg_attr(all(), must_use,,)]
   |                            ^ expected identifier
   |
   = help: the valid syntax is `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:43:40
   |
LL | #[cfg_attr(all(), must_use, deprecated,,)]
   |                                        ^ expected identifier
   |
   = help: the valid syntax is `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:43:40
   |
LL | #[cfg_attr(all(), must_use, deprecated,,)]
   |                                        ^ expected identifier
   |
   = help: the valid syntax is `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: wrong `cfg_attr` delimiters
  --> $DIR/cfg-attr-parse.rs:48:11
   |
LL | #[cfg_attr[all(),,]]
   |           ^^^^^^^^^
   |
help: the delimiters should be `(` and `)`
   |
LL | #[cfg_attr(all(),,)]
   |           ^       ^

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:48:18
   |
LL | #[cfg_attr[all(),,]]
   |                  ^ expected identifier
   |
   = help: the valid syntax is `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: wrong `cfg_attr` delimiters
  --> $DIR/cfg-attr-parse.rs:48:11
   |
LL | #[cfg_attr[all(),,]]
   |           ^^^^^^^^^
   |
help: the delimiters should be `(` and `)`
   |
LL | #[cfg_attr(all(),,)]
   |           ^       ^

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:48:18
   |
LL | #[cfg_attr[all(),,]]
   |                  ^ expected identifier
   |
   = help: the valid syntax is `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: wrong `cfg_attr` delimiters
  --> $DIR/cfg-attr-parse.rs:56:11
   |
LL | #[cfg_attr{all(),,}]
   |           ^^^^^^^^^
   |
help: the delimiters should be `(` and `)`
   |
LL | #[cfg_attr(all(),,)]
   |           ^       ^

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:56:18
   |
LL | #[cfg_attr{all(),,}]
   |                  ^ expected identifier
   |
   = help: the valid syntax is `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: wrong `cfg_attr` delimiters
  --> $DIR/cfg-attr-parse.rs:56:11
   |
LL | #[cfg_attr{all(),,}]
   |           ^^^^^^^^^
   |
help: the delimiters should be `(` and `)`
   |
LL | #[cfg_attr(all(),,)]
   |           ^       ^

error: expected identifier, found `,`
  --> $DIR/cfg-attr-parse.rs:56:18
   |
LL | #[cfg_attr{all(),,}]
   |                  ^ expected identifier
   |
   = help: the valid syntax is `#[cfg_attr(condition, attribute, other_attribute, ...)]`
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg_attr-attribute>

error: aborting due to 17 previous errors

